2009-04-19  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc-interface/trans.c (gigi): Make the special IA-64 descriptor type
	a builtin type and give it a name.

2009-04-17  Diego Novillo  <dnovillo@google.com>

	* gcc-interface/misc.c (gnat_expand_expr): Remove.
	(LANG_HOOKS_EXPAND_EXPR): Remove.

2009-04-17  Robert Dewar  <dewar@adacore.com>

	* sem_ch3.adb: Minor reformatting

2009-04-17  Pascal Obry  <obry@adacore.com>

	* adaint.c: Add __gnat_use_acl global variable to control use of ACL.

2009-04-17  Ed Schonberg  <schonberg@adacore.com>

	* sem_ch3.adb (Build_Derived_Enumeration_Type): Diagnose properly
	illegal constraints on type derived from formal discrete types.

2009-04-17  Thomas Quinot  <quinot@adacore.com>

	PR ada/35953

	* g-socthi-vms.adb, g-socthi-vms.ads, g-socthi-vxworks.adb,
	g-socthi-vxworks.ads, g-socthi-mingw.adb, g-socthi-mingw.ads,
	g-socthi.adb, g-stsifd-sockets.adb, g-socthi.ads, g-socket.adb,
	g-socket.ads (GNAT.Sockets.Thin.C_Send,
	GNAT.Sockets.Thin.Syscall_Send): Remove unused subprograms.
	Replace calls to send(2) with equivalent sendto(2) calls.
	(GNAT.Sockets.Send_Socket): Factor common code in inlined subprogram.
	(GNAT.Sockets.Write): Account for the case of hyper-empty arrays, do not
	report an error in that case. Factor code common to the two versions
	(datagram and stream) in common routine Stream_Write.

2009-04-17  Robert Dewar  <dewar@adacore.com>

	* exp_disp.adb: Minor reformatting
	Minor code reorganization (use Nkind_In)

	* prepcomp.adb: Minor reformatting

	* sem_ch3.adb: Minor reformatting

	* sem_res.adb: Minor comment addition

	* exp_ch5.adb (Expand_Assign_Array): Use Has_Address_Clause to test
	for address clause

	* lib-xref.adb (Generate_Reference): Exclude recursive calls from
	setting Is_Referenced

	* types.ads: Minor reformatting

2009-04-17  Arnaud Charlet  <charlet@adacore.com>

	* gnat_ugn.texi: Initial documentation on binding generator.

2009-04-17  Ed Schonberg  <schonberg@adacore.com>
